Fixed scrollbar flash on page load

--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,11 @@ body {
     width: 100%;
     height: 100%;
 }
+#wrap {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
 main {
     display: -ms-flexbox;
     display: -webkit-box;
